syntax = "proto3";

package realtimeLogStream;

option go_package = "github.com/ApicaSystem/apicactl/api/v1/realtimeLogStream;realtimeLogStream";

message Subscription {
    repeated string applications = 1;
}

message Response {
    string log = 1;
}

service LogStreamerService {
    rpc StreamLog(Subscription) returns (stream Response) {}
}
